syntax = "proto3";

package stredono;

option go_package="github.com/pkulik0/stredono/pb";

import "google/protobuf/timestamp.proto";

enum DonateStatus {
    INITIATED = 0;
    PAYMENT_PENDING = 1;
    PAYMENT_SUCCESS = 2;
}

message SendDonateRequest {
    string id = 1;
    string sender = 2;
    string email = 3;
    string message = 4;
    float amount = 5;
    string currency = 6;
    string recipientId = 7;
    DonateStatus status = 8;
    google.protobuf.Timestamp created = 9;
}

message SendDonateResponse {
    string redirectUrl = 1;
}